openshift/rhsso/yaml/dc_sso73_extdb_xsite.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: sso73-https-external-db-xsite
    application: sso
    rh-sso: rh-sso-7.3-v0.1-terna
    template: sso73-https-external-db-xsite
  name: sso
spec:
  replicas: 1
  selector:
    deploymentConfig: sso
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: sso
        deploymentConfig: sso
      name: sso
    spec:
      containers:
      - env:
        - name: DB_MIN_POOL_SIZE
        - name: DB_MAX_POOL_SIZE
        - name: DB_TX_ISOLATION
        - name: JGROUPS_PING_PROTOCOL
          value: openshift.DNS_PING
        - name: OPENSHIFT_DNS_PING_SERVICE_NAME
          value: sso-ping
        - name: OPENSHIFT_DNS_PING_SERVICE_PORT
          value: "8888"
        - name: HTTPS_KEYSTORE_DIR
          value: /etc/eap-secret-volume
        - name: SSO_TRUSTSTORE_SECRET
          value: sso-ssl-secret
        - name: HTTPS_KEYSTORE
          value: sso-https.jks
        - name: HTTPS_KEYSTORE_TYPE
          value: JKS
        - name: HTTPS_NAME
          value: sso-https-key
        - name: HTTPS_PASSWORD
          value: Password.
        - name: JGROUPS_ENCRYPT_SECRET
          value: sso-jgroup-secret
        - name: JGROUPS_ENCRYPT_KEYSTORE_DIR
          value: /etc/jgroups-encrypt-secret-volume
        - name: JGROUPS_ENCRYPT_KEYSTORE
          value: jgroups.jceks
        - name: JGROUPS_ENCRYPT_NAME
          value: jgroups
        - name: JGROUPS_ENCRYPT_PASSWORD
          value: sso-jgroup-secret
        - name: JGROUPS_CLUSTER_PASSWORD
          value: iIqE83akjqK1NFN52KOb3YTQE7p53MMe
        - name: SSO_ADMIN_USERNAME
          value: localadmin
        - name: SSO_ADMIN_PASSWORD
          value: Password.
        - name: SSO_REALM
        - name: SSO_SERVICE_USERNAME
          value: localadmin
        - name: SSO_SERVICE_PASSWORD
          value: Password.
        - name: SSO_TRUSTSTORE
          value: truststore.jks
        - name: SSO_TRUSTSTORE_DIR
          value: /etc/sso-secret-volume
        - name: SSO_TRUSTSTORE_PASSWORD
        - name: X509_CA_BUNDLE
          value: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        - name: JGROUPS_CLUSTER_PASSWORD
          value: iIqE83akjqK1NFN52KOb3YTQE7p53MMe
        - name: JGROUPS_ENCRYPT_PROTOCOL
          value: ASYM_ENCRYPT
        - name: SSO_ADMIN_USERNAME
          value: localadmin
        - name: SSO_ADMIN_PASSWORD
          value: Password.
        - name: SSO_REALM
        - name: SSO_SERVICE_USERNAME
          value: localadmin
        - name: ENV_FILES
          value: /opt/eap/standalone/configuration/*.env
        - name: ORACLE_DATABASE_URL
          value: "jdbc:oracle:thin:@//hostname:1521/servicename"
        - name: DB_USERNAME
        - name: DB_PASSWORD
        - name: HTTP_PROXY
        - name: HTTPS_PROXY
        - name: INFINISPAN_LOG_LEVEL
          value: DEBUG
        - name: REMOTE_CACHE_HOST
          value: localhost
        - name: REMOTE_CACHE_PORT
          value: "11222"
        image: docker-registry.default.svc:5000/
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/eap/bin/livenessProbe.sh
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: sso
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/eap/bin/readinessProbe.sh
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/eap-secret-volume
          name: eap-keystore-volume
          readOnly: true
        - mountPath: /etc/jgroups-encrypt-secret-volume
          name: eap-jgroups-keystore-volume
          readOnly: true
        - mountPath: /etc/sso-secret-volume
          name: sso-truststore-volume
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
      volumes:
      - name: eap-keystore-volume
        secret:
          defaultMode: 420
          secretName: sso-ssl-secret
      - name: eap-jgroups-keystore-volume
        secret:
          defaultMode: 420
          secretName: sso-jgroup-secret
      - name: sso-truststore-volume
        secret:
          defaultMode: 420
          secretName: sso-ssl-secret
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - sso
      from:
        kind: ImageStreamTag
        name: sso-terna:latest
    type: ImageChange
  - type: ConfigChange
status:
